<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    android:padding="5dp">

<!--用滚动视图可以避免某些型号手机的尺寸太小-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--计算器的名称-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="#03A9F4"
        android:gravity="center"
        android:text="@string/simple_calculator"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <!--显示的数字，这里最后加上的lines指高度为几行-->
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@color/white"
        android:gravity="bottom|right"
        android:lines="3"
        android:text="@string/zero"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="5"
        android:columnCount="4">

        <Button
            android:id="@+id/btn_cancle"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/cancle"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/divide"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_mutiply"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/multiply"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/clear"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_seven"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/seven"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_eight"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/eight"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_nine"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/nine"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/plus"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_four"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/four"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_five"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/five"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_six"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/six"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/minus"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_one"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/one"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_two"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/two"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_three"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/three"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_sqrt"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/sqrt"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/btn_reciprocal"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/reciprocal"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/btn_zero"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/zero"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/btn_dot"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/dot"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/btn_equal"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="@dimen/button_height"
            android:text="@string/equal"
            android:textSize="@dimen/button_font_size"
            android:textColor="@color/black"
            android:textAllCaps="false"/>

    </GridLayout>
</LinearLayout>

    </ScrollView>
</LinearLayout>