<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="添加事项"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_option"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="待做事项"
            android:drawableRight="@drawable/todo_2"/>

    </RelativeLayout>

    <!--背景图-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/img_jiyu03"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date_list_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/calendar_2"
                android:gravity="center|end"
                android:text="日期"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_date_list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:drawableRight="@drawable/arrow_down"
                android:gravity="center"
                android:text="2025-01-01"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|end"
                android:text="事项说明"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_des_list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/editext"
                android:gravity="start|top"
                android:hint="请填写待做事项"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|end"
                android:text="所需时间："
                android:textColor="@color/black"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/editext"
                android:gravity="start|top"
                android:hint="单位（分钟）"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="322dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_save_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:drawableLeft="@drawable/save"
            android:text="保存"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_delete_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:drawableLeft="@drawable/delete"
            android:text="删除"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_update_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:drawableLeft="@drawable/update"
            android:text="修改"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_smart_plan"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:drawableLeft="@drawable/smart_plan"
            android:text="个性化规划"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:drawableLeft="@drawable/clear"
            android:text="清空事项"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>

