...
                android:text="12-13"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_list"
            android:layout_width="match_parent"
            android:layout_height="469dp"
            android:background="@drawable/bg_jiyu03">

            <androidx.viewpager.widget.PagerTabStrip
                android:id="@+id/pts_list"
...
